--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,14 +5,14 @@
 */
 
 /* PC */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
     .hide-on-pc {
         display: none;
     }
 }
 
 /* Tablet & Mobile */
-@media (max-width: 1023px) {
+@media (max-width: 63.9375em) {
     .btn {
         padding: 14px 20px;
     }
@@ -37,14 +37,14 @@
 }
 
 /* Tablet */
-@media (min-width: 740px) and (max-width: 1023px) {
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
     .hide-on-tablet {
         display: none;
     }  
 }
 
 /* Mobile */
-@media (max-width: 739px) {
+@media (max-width: 46.1875em) {
     .hide-on-mobile {
         display: none;
     }
