--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,10 @@ html {
     cursor: pointer;
     transition: all 0.2s linear;
     margin-top: 16px;
+    /* dành riêng cho trình duyệt bình thường */
+    appearance: none;
+    /* webkit dành riêng cho safari */
+    -webkit-appearance: none;
 }
 
 .btn:hover {
@@ -205,7 +209,8 @@ html {
 #slider {
     margin-top: var(--header-height);
     padding-top: 50%;
-    background: url(../img/slider/chicago.jpg) top center / cover no-repeat;
+    /* background: url(../img/slider/chicago.jpg) top center / cover no-repeat; */
+    /* ../.. nhảy ra ngoài thêm phát nữa */
     position: relative;
 }
 
@@ -229,6 +234,7 @@ html {
     margin-top: 20px;
     font-size: 16px;
     font-weight: 600;
+    text-shadow: 0 0 1px #000;
 }
 
 #content {
